2009-01-10  Sven Herzberg  <sven@imendio.com>

	Added the button style from the buttonbox demo

	* demos/rgba-demo.gtkrc: just copied the button style part

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Added nice stripes to the window, so transparency will be visible once
	the children are transparent.

	* demos/images/window.png,
	* demos/images/window.xcf: added stripes to the window and the GIMP
	xcf source file

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Prepare the transparent background for the demo

	* demos/rgba-demo.c (window_expose_event), (main): and fix some
	layouting issues

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Added a background image for the RGBA demo

	* demos/rgba-demo.gtkrc,
	* demos/images/window.png: added a semi-transparent background image
	to the demo

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Get the remaining RGBA bits into sapwood

	* engine/sapwood-pixmap.c
	(sapwood_pixmap_get_for_file): set a colormap for the remove pixmap;
	this is required to work properly with the gdk-cairo code
	(sapwood_pixmap_render_rects_internal): use cairo for rendering the
	pixmap; gdk doesn't have a clue about alpha rendering
	(sapwood_pixmap_render_rects): properly initialize the temporary
	pixmap to be fully transparent (if in 32bit mode)

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Don't expect 24/32 bit pixmap depth, expect system_depth/32

	* server/sapwood-server.c (extract_pixmap_single),
	(pixbuf_open_response_new): replace the 24 with a better value;
	fixes running sapwood in a 16 bit Xephyr window

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Added a gtkrc file for the RGBA demo

	* demos/rgba-demo.c (main): load the gtkrc file
	* demos/rgba-demo.gtkrc: added the gtkrc file

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Added a quit button to the window

	* demos/rgba-demo.c (main): added a quit button; set the table's row
	spacing; destroy the window when the button is clicked
